// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BucketsConstruct  synthetizes properly 1`] = `
"{
  \\"Resources\\": {
    \\"BucketsBucket04F23AD6D\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"balde\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"BucketsBucket1B98A5B53\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"deposito\\"
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    }
  }
}"
`;

exports[`BucketsConstruct  synthetizes properly with CORS 1`] = `
"{
  \\"Resources\\": {
    \\"BucketsBucket04F23AD6D\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"balde\\",
        \\"CorsConfiguration\\": {
          \\"CorsRules\\": [
            {
              \\"AllowedHeaders\\": [
                \\"*\\"
              ],
              \\"AllowedMethods\\": [
                \\"GET\\",
                \\"PUT\\",
                \\"POST\\",
                \\"DELETE\\"
              ],
              \\"AllowedOrigins\\": [
                \\"*\\"
              ]
            }
          ]
        }
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    },
    \\"BucketsBucket1B98A5B53\\": {
      \\"Type\\": \\"AWS::S3::Bucket\\",
      \\"Properties\\": {
        \\"BucketName\\": \\"deposito\\",
        \\"CorsConfiguration\\": {
          \\"CorsRules\\": [
            {
              \\"AllowedHeaders\\": [
                \\"*\\"
              ],
              \\"AllowedMethods\\": [
                \\"PUT\\"
              ],
              \\"AllowedOrigins\\": [
                \\"*\\"
              ]
            }
          ]
        }
      },
      \\"UpdateReplacePolicy\\": \\"Delete\\",
      \\"DeletionPolicy\\": \\"Delete\\"
    }
  }
}"
`;
